tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_39.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (- (+ ((+ 1223) + (x MOD 2))));
               p := ((((+ z) + (+ 0)) DIV (+ (y - y))) > ((- (x MOD z)) - ((200 + 200) + (z DIV 2))));
               z := ((- (- (y + z))) - ((+ (+ z)) DIV ((z * x) MOD (1223 * x))));
  (* error *)  r := ((((r + 1223) * (0 + x)) > (- (+ x))) & ((- (x DIV x)) < ((x + 200) MOD (x MOD 1223))));
               y := (((- (2 + y)) + (+ (z DIV 2))) - (- ((y DIV x) * (+ 200))));
               y := ((((2 MOD 0) + (2 - 1223)) - ((2 DIV 2) * (2 * y))) MOD (- (- (1223 MOD 2))));
               y := ((+ ((- x) MOD (+ y))) - (((- z) DIV (2 + z)) * ((1 + 1) + (x MOD 2))));
               z := ((((- 1) DIV (1223 + 1223)) DIV ((+ y) + (2 MOD x))) + (+ ((+ 1) MOD (2 * 200))));
               y := (((+ (- 1223)) MOD ((+ 1) - (x * 200))) * (((x - x) + (1 MOD 0)) + ((2 * 200) - (+ 1223))));
               r := ((- ((y MOD 1) - (0 DIV y))) = (((- 1223) * (x MOD z)) MOD (- (z MOD 0))))
END Test14.